@@ -60,7 +60,7 @@
         <LinearLayout
             android:id="@+id/overflow"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <com.klinker.android.twitter.manipulations.widgets.HoloTextView
