@@ -3,6 +3,8 @@
     &#8226; Mute by client (long press the timestamp)<br/>
     &#8226; View pictures from twitters native client in direct messages<br/>
     &#8226; Share your pictures from the photo viewer dialog to any apps<br/>
+    &#8226; Some rotation fixes<br/>
+    &#8226; Character counter on the scheduled tweets<br/>
 <br/><br/>
 
 <b>Version 2.4.7:</b><br/><br/>
